test(m3): did a stress test with redis benchmark

--- a/docs/bench/v1.md
+++ b/docs/bench/v1.md
@@ -1,9 +1,14 @@
 # Benchmark Baseline
 
-**goos**: linux
-**goarch**: amd64
-**pkg**: github.com/DarsenOP/Rift/internal/storage
-**cpu**: 13th Gen Intel(R) Core(TM) i9-13980HX
+**Hardware:** 13th Gen Intel i9-13980HX, 32 cores  
+**Go:** 1.24 linux/amd64  
+**Date:** 2025-09-04
+
+```bash
+goos: linux
+goarch: amd64
+pkg: github.com/DarsenOP/Rift/internal/storage
+cpu: 13th Gen Intel(R) Core(TM) i9-13980HX
 
 BenchmarkSet-32        	 5161022	       252.6 ns/op	     154 B/op	       2 allocs/op
 BenchmarkGetHit-32     	88412450	        14.39 ns/op	       0 B/op	       0 allocs/op
@@ -12,7 +17,7 @@ BenchmarkExpire-32     	 2480557	       513.8 ns/op	     313 B/op	       2 alloc
 
 PASS
 ok  	github.com/DarsenOP/Rift/internal/storage	6.478s
-
+```
 
 ## Observations
 - Reads scale perfectly (0 allocs, ~11-14 ns) – global RWMutex hot-path is fine  
